# mookbark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  fly.toml
client/: package.json  turbo.json
client/apps/landing-llm/: README.md  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
client/apps/landing-llm/app/: box.tsx  layout.tsx  login-button.tsx  page.tsx  robots.txt  sitemap.xml  zigzags.tsx
client/apps/landing-llm/db/: index.ts
client/apps/landing-llm/db/schema/: bookmark.ts  index.ts
client/apps/landing-llm/session/: index.ts
client/apps/web/: .env.development  .env.production  .gitignore  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.cliAuth.ts  vite.config.ts
client/apps/web/cliAuth/: index.html
client/apps/web/src/: cliAuth.tsx
client/apps/web/src/components/: AnimatedMenu.tsx  App.tsx  Faq.tsx  Login.tsx  NoMatch.tsx  ProtectedRoute.tsx  Router.tsx
client/apps/web/src/hooks/: useLocalStorage.ts  useOAuthLogin.ts  useWindowDimensions.ts
frontend/: index.html  package.json  tailwind.config.cjs  vite.config.ts
frontend/cliAuth/: index.html
frontend/src/: cliAuth.tsx  main.tsx
frontend/src/components/: ButtonZigzag.tsx  GridZigzag.tsx  HeaderZigzag.tsx  Home.tsx  Login.tsx  Mookbark.tsx  ProtectedRoute.tsx  Router.tsx  Zigzag.tsx
frontend/src/hooks/: useOAuthLogin.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20221011_000001_create_bookmark_table.rs  m20221011_000002_create_container_table.rs  m20221011_000003_create_relationship_table.rs  m20242002_000001_create_bookmark_table.rs  m20242002_000002_create_container_table.rs  m20242002_000003_create_closure_table.rs  m20242002_000004_create_user_table.rs
src/: lib.rs  main.rs  services.rs
src/cli/: add_bookmark.rs  add_container.rs  add_root.rs  commands.rs  db.rs  delete_entity.rs  get_bookmarks.rs  https_client.rs  mod.rs
src/cli/auth/: create_server.rs  file.rs  login.rs  mod.rs  page.rs  serve_token_page.rs  token.rs
src/entities/: bookmark.rs  closure.rs  container.rs  mod.rs  prelude.rs
src/server/: add_bookmark.rs  add_container.rs  db.rs  delete_entity.rs  get_bookmarks.rs  mod.rs  token.rs
src/terminal_app/: action.rs  mod.rs  run.rs  stateful_tree.rs  tui.rs  ui.rs
src/web_server/: add_bookmark.rs  add_container.rs  check_auth.rs  create_server.rs  db.rs  delete_bookmark.rs  delete_container.rs  get_bookmark.rs  get_bookmarks.rs  get_user.rs  health_check.rs  logout.rs  mod.rs  oauth.rs  redis_store_with_pool.rs  serve_web_app.rs  services.rs  session.rs  token.rs
src/web_server/entities/: bookmark.rs  closure.rs  container.rs  mod.rs  prelude.rs  user.rs
termtree/: Cargo.toml
termtree/src/: lib.rs
tui-rs-tree-widget/src/: lib.rs
(+14 files in other folders)
