[package]
name = "mookbark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termtree = { path = "./termtree" }
tui-tree-widget = { path = "./tui-rs-tree-widget" }
axum = "0.7.3"
anyhow = "1.0.75"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
home = "0.5.5"
http = "1.0.0"
nanoid = "0.4.0"
oauth2 = { version = "4.4.2" }
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "json",
] }
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-mysql",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = [
  "cors",
  "fs",
  "trace",
  "timeout",
] }
tower-sessions = { version = "0.7.0", features = ["redis-store"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ratatui = "0.24.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
tui-textarea = { version = "0.4.0", features = ["ratatui", "crossterm"] }
# required for the local session store
async-trait = "0.1.74"
time = "0.3.30"
thiserror = "1.0.50"
rmp-serde = "1.1.2"
tokio-scoped = "0.2.0"
reqwest_cookie_store = "0.6.0"
webbrowser = "0.8.12"
hyper = "1.0.1"
hyper-util = { version = "0.1.1", features = ["tokio", "server-auto", "http1"] }
lazy_static = "1.4.0"
[dependencies.fred]
features = ["enable-rustls"]
